 * VM
   - Callable EVAL.
   - Symbol support.
   - Macroses.
   - Own tokenizer.
   - Reduce types.
 * GP
   - Static types.
   - Program optimization.
   - Multithread examine.
   - Add scripting for individual testing and comparsion.

Now
 * VM
   - Throw on wrong function number at minimization.
   - Closure support.
   - Use symbols map for convert from string to Object.
 * GP
   - Change generation of new population.
   - Remove mutations from crossover.
   - Stop on non-move answer.

Version 0.0.1 2011-01-04
 * Remove GTKmm dependencies.
 * Use GNU Guile for scripting and config.
 * Move VM into library.
 * Catch Scheme exceptions.
 * Load options from Scheme file.
 * Remove GP test and load other options.
 * Append --enable-gprof and --enable-debug options.

Version 0.0.0.10 2011-01-02
 * Remove Ruby support.
 * Dump full population at the end.
 * Make ST_ANSWER_QUALITY, ST_MOVE_DIFF, ST_DIR_DIFF as aggregative.
 * Fix overflow in aggregation.
 * Append ST_DIRS parameter.
 * Append ST_AREA parameter.
 * Print world map.

Version 0.0.0.9 2010-12-30
 * Remove check for equality in mutation and crossover because it can break good ADF.
 * Fix DIR_DIFF status calculating.
 * Fix evalation at end of circles.
 * Use elitism and tournament selection.
 * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
 * Remove ST_STATIC_CHECK.
 * Move run status into CurrentState.
 * Shutdown Environment::Eval loop.
 * Set maximum number of steps.
 * Shutdown Individual::Execute loop.

Version 0.0.0.8 2010-12-05
 * Add support for current state.
 * Fix for better individuals.
 * Set maximum heap size to 196 blocks.
 * Refuse get Object from WeakObject.
 * Set maximum of object to calculate stack in Environment::Eval.
 * Add --enable-static to compile functions statically to avoid stack corruption.
 * Speedup output objects with setted width.
 * Set maximum stack depth in Environment::Eval.
 * Add test for infinity recursion.